Fixed scrollbar and width bug on mobile, working on nav bar for tablet/mobile

--- a/css/main.css
+++ b/css/main.css
@@ -166,7 +166,7 @@ aside img {
 }
 
 article {
-	display: inline-block;
+	display: block;
 }
 
 article p {
@@ -385,6 +385,13 @@ footer {
 		padding: 0 2em;
 		text-align: left;
 	}
+	nav {
+		height: 2em;
+	}
+
+	nav li {
+		padding: .5em 0;
+	}
 
 	.logo, .blurb {
 		display: block;
@@ -394,7 +401,8 @@ footer {
 
 	.title {
 		width: 100%;
-		padding: .5em;
+		padding: .2em;
+		margin: .2em;
 		text-align: center;
 	}
 
@@ -440,7 +448,7 @@ footer {
 @media screen and (max-width:480px){
 	nav {
 		width: 100%;
-		height: 3em;
+		height: 2em;
 	}
 
 	nav ul {
@@ -473,9 +481,7 @@ footer {
 		margin: .25em 0;
 	}
 
-	article {
-		display: inline-block;
-	}
+
 
 	.logo, .blurb {
 		text-align: left;
