--- a/css/syntax.css
+++ b/css/syntax.css
@@ -6,7 +6,7 @@ blockquote p {
 
 pre, code {
 	font-family: Consolas, "Droid Sans Mono", Menlo-Regular, monospace;
-  font-size: 16px;
+  font-size: 15px;
 }
 
 section > pre {
@@ -15,16 +15,18 @@ section > pre {
 	background-color: #dcdcdc;
 }
 
-section > pre {
-	margin-bottom: 1em;
-}
-
-pre {
+pre, .highlight {
+  white-space: pre;
 	padding: .25em;
+  height: 100%;
 }
 
-blockquote, .highlight {
-	margin-bottom: 1em;
+.highlight {
+    overflow: auto;
+}
+
+section > pre, blockquote, .highlight {
+	margin: .5em 0;
 }
 
 .highlight code {
